# xcalc-android-wrapper

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/st235/com/github/xcalc_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/st235/com/github/xcalc_android/: CalcAdapter.kt  CalcInfo.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  content_calculation_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/st235/com/github/xcalc_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
xcalc-android-wrapper/: build.gradle  gradle.properties  publish.gradle
xcalc-android-wrapper/src/androidTest/java/st235/com/github/xcalc_android_wrapper/: ExampleInstrumentedTest.kt
xcalc-android-wrapper/src/main/: AndroidManifest.xml
xcalc-android-wrapper/src/main/cpp/: CMakeLists.txt  native-lib.cpp
xcalc-android-wrapper/src/main/cpp/utils/: jstring_utils.cpp  jstring_utils.h
xcalc-android-wrapper/src/main/java/st235/com/github/xcalc_android_wrapper/: AngleUnits.kt  CalculationResult.kt  CalculationStatus.kt  XCalc.kt  XCalcInternal.kt
xcalc-android-wrapper/src/main/java/st235/com/github/xcalc_android_wrapper/utils/: ThreadMarshaller.kt
xcalc-android-wrapper/src/test/java/st235/com/github/xcalc_android_wrapper/: ExampleUnitTest.kt
